# Verbatum

./: .env.example  .gitignore  README.md  pyproject.toml
archive/legacy_2026-05-18/docs/: current_state_and_benchmarks.md  latency_diagnostics.md  manual_voice_test.md
archive/legacy_2026-05-18/scripts/: benchmark_direct_gemini_ttft.py  start_detached_server.sh  stop_detached_server.sh  summarize_latency.py
archive/legacy_2026-05-18/static/: app.js  index.html  styles.css
archive/legacy_2026-05-18/tests/: __init__.py  test_config.py  test_daily.py  test_events.py  test_first_phrase.py  test_latency.py  test_livekit.py  test_recorder.py  test_server_config.py  test_summarize_latency.py  test_turn_commit.py
docs/: VERBATUM_CONTEXT.md  current_state_against_roadmap_may_september.md  project_deep_dive_updated_roadmap_2026-05-29.md  tool_calling_diagnostic_report_2026-06-07.md  v01_voice_agent_review_report.md  v02_2_repeated_issue_summary.md  v02_3_repeated_issue_summary.md  v2_baseline.md  winning_stack_livekit_flux_groq_sonic3.md
scripts/: render_markdown_report_pdf.py  start_detached_server.sh  stop_detached_server.sh  summarize_latency.py
src/verbatim/: __init__.py  agent_worker.py  client_config.py  config.py  events.py  hume.py  rooms.py  server.py
src/verbatim/analytics/: __init__.py  call_notes.py  cli.py  evaluation.py  latency.py  (+1 more)
static/: app.js  index.html  styles.css
tests/: test_client_config.py  test_config.py  test_evaluations.py  test_events.py  test_integrations.py  test_rooms.py  test_server.py  test_static_ui.py  test_tool_evaluation.py
(+24 files in other folders)
